--- a/st/main.css
+++ b/st/main.css
@@ -3,6 +3,7 @@ body,html {
   padding:0;
   font-family: Tahoma;
   background: linear-gradient(to bottom, #f2f6f8 0%,#d8e1e7 100%);
+  background-attachment: fixed;
   height: 100%;
 }
 
