--- a/st/main.css
+++ b/st/main.css
@@ -93,3 +93,45 @@ background: linear-gradient(to bottom, #b2065f 0%,#c0106e 50%,#9a0657 51%,#9a0a5
   color: white;
   text-shadow: 0px 0px 5px rgba(250,250,250,1);
 }
+
+
+.testimonial {
+  border: 1px solid #b5c6d0;
+  width: 550px;
+  height: 118px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+}
+.testimonialName {
+  margin-top:2px;
+  margin-left:4px;
+  display:inline-block;
+  padding: 0;
+  text-align: center;
+  color: #70c96d;
+  font-weight: bold;
+}
+.testimonialRev {
+  width: 532px;
+  height: 80px;
+  margin-left: 8px;
+  margin-top:-8px;
+  display:flex
+}
+.testimonialRPic {
+  width: 64px;
+  height: 64px;
+  display:inline-block;
+}
+.testimonialRTxt {
+  width:464;
+  height: 71px;
+  margin-left: 4px;
+  background-color: #f2f6f8;
+  border-radius:8px;
+  display:inline-block;
+  color: #929292;
+  font-style: italic;
+  padding: 4px;
+}
