--- a/st/main.css
+++ b/st/main.css
@@ -145,7 +145,7 @@ filter: drop-shadow(0px 0px 5px rgba(207,231,247,1));
 }
 
 
-.topAd {
+.topPm {
   border: 1px solid gray;
   width: 728px;
   height: 90px;
@@ -154,7 +154,7 @@ filter: drop-shadow(0px 0px 5px rgba(207,231,247,1));
   margin-top:20px;
   font-family:Verdana, sans-serif;
 }
-.adLink {
+.pmLink {
   background-color:rgba(170, 170, 170, 0.3);
   display: inline;
   border-bottom-left-radius: 4px;
@@ -162,17 +162,17 @@ filter: drop-shadow(0px 0px 5px rgba(207,231,247,1));
   margin-top: 0;
   user-select: none;
   text-decoration: none;
-  width: 16px;
+  width: 34px;
   height: 16px;
 }
-.skyscaperAd {
+.skyscaperPm {
   border: 1px solid gray;
   width: 120px;
   height: 600px;
   position:absolute;
   top:0px;
 }
-.squareAd {
+.squarePm {
   border: 1px solid gray;
   width: 125px;
   height: 125px;
@@ -180,7 +180,7 @@ filter: drop-shadow(0px 0px 5px rgba(207,231,247,1));
   margin-left: auto;
   margin-right: auto;
 }
-.adTxt {
+.pmTxt {
   font-size: 10px;
   margin-top: 1px;
   margin-left: 1px;
